# epam-service-connector

./: README.md  TROUBLESHOOTING.md  run.sh
.github/workflows/: docker-toolchain.yml
aos-cloud-deployment/: .gitignore  AOSCLOUD_CONFIG.md  LICENSE  README.md  REQUIREMENTS.md  build.sh  package-lock.json  package.json  standalone.html  tsconfig.json
aos-cloud-deployment/src/: index.ts  setup-react.ts  standalone.ts
aos-edge-toolchain/: .env.example  .gitignore  Dockerfile  Dockerfile.builder  README.md  conanfile-grpc.txt  setup-build-env.sh
aos-edge-toolchain/conan-profiles/: aarch64-linux-gnu
aos-edge-toolchain/docs/: ARCHITECTURE_SLIDES.md  architecture.md
aos-edge-toolchain/example/: README.md
aos-edge-toolchain/example-kuksa/: CMakeLists.txt
aos-edge-toolchain/example-kuksa/src/: main.cpp
aos-edge-toolchain/scripts/: aos-broadcaster.js  aos-toolkit.sh  broadcast-status.sh  init-certs.py
docs/: AOSCLOUD_SETUP.md  BRIDGE_STATUS.md  CPP_DEPLOYMENT_LOG.md  CREATED_SERVICES.md  GUIDE.md  KUKSA-GRPC-GUIDE.md  SDV_BLUEPRINT_DEPLOYMENT_GUIDE.md  SERVICES_TO_CREATE.md  STATIC_BUILD_SUCCESS.md  TROUBLESHOOTING.md
kuksa-docker/: README.md  bridge.py  feeder.py  start-kuksa.sh  start-sdv-runtime.sh  stop-kuksa.sh  stop-sdv-runtime.sh
sdv-blueprint/: .gitignore  Dockerfile.python  Makefile  README.md  docker-compose.yml  server.js  signal-writer.py  start.sh  vss-merged.json  vss-overlay.json
sdv-blueprint/dashboard/: build.sh  dashboard.css  dashboard.js  index.html  package-lock.json  package.json  standalone.html  tsconfig.json
sdv-blueprint/end-simulator/: simulator.py
sdv-blueprint/kuksa-sync/: kuksa-bridge.py
sdv-blueprint/presets/: ev-range-extender.cpp  ev-range-extender.yaml  signal-reporter.cpp  signal-reporter.yaml  signal-writer.cpp  signal-writer.yaml
sdv-blueprint/signal-reporter/: reporter.py  requirements.txt
service/: .travis.yml
service/meta/: config.yaml
(+20 files in other folders)
